Added main and attempting to create a window. Updated cmake for the main program target

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,6 @@ find_package(glfw3 REQUIRED)
 #${OPENGL_LIBRARIES}
 include_directories(${GLEW_INCLUDE_DIRS} ${GLFW_INCLUDE_DIRS})
 link_libraries(${GLEW_LIBRARIES} ${GLFW_LIBRARIES})
-add_executable(run_snake_evolution snake_evolution_game.cpp)
+add_executable(run_snake_evolution snake_evolution.cpp)
 
 target_link_libraries(run_snake_evolution glfw)
