--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,8 +7,14 @@ find_package(glfw3 REQUIRED)
 
 #${OPENGL_INCLUDE_DIRS}
 #${OPENGL_LIBRARIES}
-include_directories(${GLEW_INCLUDE_DIRS} ${GLFW_INCLUDE_DIRS})
+include_directories(${GLFW_INCLUDE_DIRS} ${GLEW_INCLUDE_DIRS} )
 link_libraries(${GLEW_LIBRARIES} ${GLFW_LIBRARIES})
 add_executable(run_snake_evolution snake_evolution.cpp)
 
 target_link_libraries(run_snake_evolution glfw)
+target_link_libraries(run_snake_evolution GL)
+
+add_executable(test_opengl test_opengl.cpp)
+target_link_libraries(test_opengl glfw)
+target_link_libraries(test_opengl GL)
+
