Added additional files needed for project submission and updated cmake to also install the program

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.26)
+cmake_minimum_required(VERSION 3.1 FATAL_ERROR)
 project(snake_evolution_game LANGUAGES CXX)
 
 # find_package(OpenGL REQUIRED)
@@ -7,9 +7,17 @@ find_package(glfw3 REQUIRED)
 
 include_directories(${CMAKE_SOURCE_DIR}/include)
 
+#add and link glfw and glew libraries
 include_directories(${GLFW_INCLUDE_DIRS} ${GLEW_INCLUDE_DIRS} )
 link_libraries(${GLEW_LIBRARIES} ${GLFW_LIBRARIES})
-add_executable(run_snake_evolution snake_evolution.cpp include/shader_code.hpp)
 
+#create executable and link with libraries
+add_executable(run_snake_evolution snake_evolution.cpp include/shader_code.hpp)
 target_link_libraries(run_snake_evolution glfw)
 target_link_libraries(run_snake_evolution GL)
+
+#install the program
+install(TARGETS run_snake_evolution DESTINATION bin)
+
+#install demo script
+install(PROGRAMS demo DESTINATION bin)
